# ----------------------------------------------------------------------
# U-Measure - A GUI software for ultrasonic data collection.
# Author: Christofanis Skordas (skordasc@uchicago.edu)
# Copyright (C) 2022  GSECARS, The University of Chicago
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
# ----------------------------------------------------------------------

[metadata]
name = U-Measure
author = Christofanis Skordas
author_email = skordasc@uchicago.edu
description = A GUI software for ultrasonic data collection.
license_file = LICENSE
long_description = file: README.mb
long_description_content_type = text/markdown
url = https://github.com/skordaschristofanis/U-Measure
project_urls =
    Bug Tracker = https://github.com/skordaschristofanis/U-Measure/issues
classifiers =
    Development Status :: 3 - Development
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering

[options]
packages =
    measure
install_requires =
    PyQt6>=6.4.0
    PyVISA>=1.12.0
    QtPy>=2.3.0
python_requires = >=3.10
package_dir =
    =.
zip_safe = no

[versioneer]
VCS = git
style = pep440
versionfile_source = measure/_version.py
versionfile_build = measure/_version.py
tag_prefix = ''
parentdir_prefix = ''
