##############################################################################################
# File Name: setup.cfg
# Description: This file contains the configuration for the setup.py script. 
#
# Attribution:
# - This file is part of the U-Measure project.
#
# License: GPL-3.0
#
# U-Measure 
#
# Copyright (c) 2023 Christofanis Skordas
# Copyright (c) 2023 GSECARS, The University of Chicago
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
##############################################################################################

[metadata]
name = U-Measure
author = Christofanis Skordas
author_email = skordasc@uchicago.edu
descritption = An ultrasonic measurement data collection software.
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GSECARS/U-Measure
project_urls =
    Bug Tracker = https://github.com/GSECARS/U-Measure/issues
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering

[options]
packages =
    umeasure
install_requires =
    PyQt6>=6.5.2
    pyvisa>=1.13.0
    qtpy>=2.3.1
    GSELogger>=1.0.1
python_requires = >=3.10
package_dir =
    =.
zip_safe = no

[versioneer]
VCS = git
style = pep440
versionfile_source = umeasure/_version.py
versionfile_build = umeasure/_version.py
tag_prefix = ''
parentdir_prefix = ''